<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">

    <LinearLayout
        android:id="@+id/MainContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/CharacterHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/japanese_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/JapaneseCharacterDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/JapaneseCharacterBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@color/colorPrimary" />

            <TextView
                android:id="@+id/CharacterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Hello World!"
                android:textColor="@color/colorPrimaryDark"
                android:textColorLink="@color/colorAccent"
                android:textSize="24sp" />

        </FrameLayout>

        <TextView
            android:id="@+id/RomanjiHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/romanji_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/RomanjiDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/RomanjiBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@color/colorPrimary" />

            <TextView
                android:id="@+id/RomanjiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Hello World!"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/EnglishHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/translation_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/EnglishDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/EnglishBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@color/colorPrimary" />

            <TextView
                android:id="@+id/EnglishText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Hello World!"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />
        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/ButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ShowRomanjiButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorAccent"
                android:onClick="TranslateRomanji"
                android:text="@string/show_romanji_button_text" />

            <Button
                android:id="@+id/ShowEnglishButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorAccent"
                android:onClick="Translate"
                android:text="@string/show_english_button_text" />

            <Button
                android:id="@+id/NextButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorAccent"
                android:onClick="NextText"
                android:text="@string/next_button_text" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/enableRandomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="ToggleRandomization"
                android:text="@string/random_button_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/optionsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/options_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/StudyTableDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/character_study"
            android:gravity="center"
            android:longClickable="false"
            android:spinnerMode="dropdown"
            android:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/backButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_vertical|end"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorAccent"
            android:onClick="Back"
            android:shadowDx="10"
            android:text="@string/back_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>